# alkaline

./: Cargo.toml  README.md  flake.nix
alk/: Cargo.toml
alk/src/: lib.rs  main.rs
alk_gpui/: Cargo.toml
alk_gui/: Cargo.toml
alk_gui/src/: lib.rs
alk_iced/: Cargo.toml
alk_iced/src/: main.rs
alkaline/: Cargo.toml
alkaline/src/: adapter.rs  alkaline.rs  backend.rs  client.rs  database.rs  error.rs  lib.rs  statement.rs  storage.rs  value.rs
alkaline/src/adapter/: once_value.rs  serde_adapter.rs
alkaline/src/backend/: ephemeral_reference.rs  persistent_reference.rs
alkaline/src/statement/: toml_ql.rs
alkaline/src/value/: de.rs  ser.rs
alkaline/src/value/ser/: serializer.rs
markdown_adapter/: Cargo.toml
markdown_adapter/src/: io.rs  lib.rs
ql/: Cargo.toml
ql/src/: lib.rs
smel/: Cargo.toml
smel/src/: document.rs  lib.rs  pattern.rs  pattern_match.rs  structure.rs
