[workspace]
resolver = "2"
members = [
  "alkaline",
  "alk",
]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = "1.36"
serde = "1.0"
serde_json = "1.0"
ron = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
