[package]
name = "alk"
version = "0.1.0"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[features]
default = ["example_data"]
# include example data adapters
example_data = ["alkaline/example_data"]

[dependencies]
alkaline = { path = "../alkaline" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
