[package]
name = "alkaline"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
