[package]
name = "alkaline_markdown_adapter"
version = "0.1.0"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
alkaline = { path = "../alkaline" }
async-trait.workspace = true
tokio = { workspace = true, features = ["io-util"] }
pulldown-cmark = "0.10"
