[package]
name = "smel"
description = "A Structured Markdown Editing interface and (eventually) Language."
version = "0.1.0"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[features]
default = ["ron"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true, optional = true }
comrak = "0.21"
